Erfahrungsberichte Bilder raus

--- a/letteringlernen.html
+++ b/letteringlernen.html
@@ -144,7 +144,7 @@
                 <div class="item">
                     <div class="block-33 h-100">
                         <div class="vcard d-flex mb-3">
-                            <div class="image align-self-center"><img src="images/person_1.jpg" alt="Person here"></div>
+                            <!--<div class="image align-self-center"><img src="images/person_1.jpg" alt="Person here"></div>-->
                             <div class="name-text align-self-center">
                                 <h2 class="heading">Caro</h2>
                                 <span class="meta">Kursteilnehmerin</span>
@@ -163,7 +163,7 @@
                 <div class="item">
                     <div class="block-33 h-100">
                         <div class="vcard d-flex mb-3">
-                            <div class="image align-self-center"><img src="images/person_2.jpg" alt="Person here"></div>
+                            <!--<div class="image align-self-center"><img src="images/person_2.jpg" alt="Person here"></div>-->
                             <div class="name-text align-self-center">
                                 <h2 class="heading">Ariane und Swetlana</h2>
                                 <span class="meta">Kursteilnehmer</span>
@@ -182,7 +182,7 @@
                 <div class="item">
                     <div class="block-33 h-100">
                         <div class="vcard d-flex mb-3">
-                            <div class="image align-self-center"><img src="images/person_1.jpg" alt="Person here"></div>
+                            <!--<div class="image align-self-center"><img src="images/person_1.jpg" alt="Person here"></div>-->
                             <div class="name-text align-self-center">
                                 <h2 class="heading">Marie-Sophie</h2>
                                 <span class="meta">Kursteilnehmerin</span>
@@ -201,7 +201,7 @@
                 <div class="item">
                     <div class="block-33 h-100">
                         <div class="vcard d-flex mb-3">
-                            <div class="image align-self-center"><img src="images/person_2.jpg" alt="Person here"></div>
+                            <!--<div class="image align-self-center"><img src="images/person_2.jpg" alt="Person here"></div>-->
                             <div class="name-text align-self-center">
                                 <h2 class="heading">Theresia</h2>
                                 <span class="meta">Kursteilnehmerin</span>
@@ -220,7 +220,7 @@
                 <div class="item">
                     <div class="block-33 h-100">
                         <div class="vcard d-flex mb-3">
-                            <div class="image align-self-center"><img src="images/person_2.jpg" alt="Person here"></div>
+                            <!--<div class="image align-self-center"><img src="images/person_2.jpg" alt="Person here"></div>-->
                             <div class="name-text align-self-center">
                                 <h2 class="heading">Felix</h2>
                                 <span class="meta">Kursteilnehmer</span>
