Alle Forms korrekt eingebunden

--- a/anfrage.html
+++ b/anfrage.html
@@ -115,7 +115,7 @@
 
             <div class="row mt-5">
                 <div class="col-12 mb-5 order-2">
-                    <form name="registration-form" accept-charset="utf-8" action="https://formspree.io/letteringimstall@gmail.com" method="post">
+                    <form name="registration-form" accept-charset="utf-8" action="https://formspree.io/f/xwkwwobn" method="post">
                         <div class="row">
                             <div class="col-md-6 form-group">
                                 <label for="name">Vorname</label>
