--- a/letteringlernen.html
+++ b/letteringlernen.html
@@ -224,7 +224,7 @@
                             <div class="name-text align-self-center">
                                 <h2 class="heading">Felix</h2>
                                 <span class="meta">Kursteilnehmer</span>
-                            </div>
+                            </div>p
                         </div>
                         <div class="text">
                             <blockquote>
