--- a/kursbuchen.html
+++ b/kursbuchen.html
@@ -146,8 +146,9 @@
                                 <label for="full-name">Kurs wählen</label>
                                 <select name="Gewaehlter-Kurs" required="" class="form-control " style="height:50px">
                                     <option value="Select" selected="" disabled="">Kurs</option>
-                                    <option value="Anfaenger 05.05.2020">Anfänger 05.05.2020</option>
-                                    <option value="Anfaenger 12.05.2020">Anfänger 12.05.2020</option>
+                                    <!--<option value="Anfaenger 05.05.2020">Anfänger 05.05.2020</option>
+    <option value="Anfaenger 12.05.2020">Anfänger 12.05.2020</option>-->
+                                    <option value="Leer">Aktuell keine Termine verfügbar</option>
                                 </select>
                             </div>
                         </div>
