--- a/letteringlernen.html
+++ b/letteringlernen.html
@@ -34,7 +34,7 @@
         <nav class="navbar navbar-expand-lg  bg-dark">
             <div class="container-fluid">
                 <a class="navbar-brand" href="index.html">
-                    <img src="images\Website_Logo_IMG_0091.PNG" alt="Lettering im Stall Logo im Header" title="Lettering im Stall" style="        max-height: 120px;">
+                    <img src="images\Website_Logo_IMG_0091.PNG" alt="Lettering im Stall Logo im Header" title="Lettering im Stall" style=" height:200px;       max-height: 200px;">
 
                 </a>
 
@@ -137,14 +137,14 @@
         <div class="container">
             <div class="row justify-content-center mb-5">
                 <div class="col-md-8 text-center">
-                    <h2 class="mb-4 section-title">Nachrichten unserer Kursteilnehmer</h2>
+                    <h2 class="mb-4 section-title">Nachrichten von Kursteilnehmern</h2>
                 </div>
             </div>
             <div class="nonloop-block-11 owl-carousel">
                 <div class="item">
                     <div class="block-33 h-100">
                         <div class="vcard d-flex mb-3">
-                            <!--<div class="image align-self-center"><img src="images/person_1.jpg" alt="Person here"></div>-->
+                            <div class="image align-self-center"><img src="images/caro.jpg" alt="Caro"></div>
                             <div class="name-text align-self-center">
                                 <h2 class="heading">Caro</h2>
                                 <span class="meta">Kursteilnehmerin</span>
@@ -163,7 +163,7 @@
                 <div class="item">
                     <div class="block-33 h-100">
                         <div class="vcard d-flex mb-3">
-                            <!--<div class="image align-self-center"><img src="images/person_2.jpg" alt="Person here"></div>-->
+                            <div class="image align-self-center"><img src="images/Ariane.jpg" alt="Person here"></div>
                             <div class="name-text align-self-center">
                                 <h2 class="heading">Ariane und Swetlana</h2>
                                 <span class="meta">Kursteilnehmer</span>
@@ -182,7 +182,7 @@
                 <div class="item">
                     <div class="block-33 h-100">
                         <div class="vcard d-flex mb-3">
-                            <!--<div class="image align-self-center"><img src="images/person_1.jpg" alt="Person here"></div>-->
+                            <div class="image align-self-center"><img src="images/MarieSophie.jpg" alt="Person here"></div>
                             <div class="name-text align-self-center">
                                 <h2 class="heading">Marie-Sophie</h2>
                                 <span class="meta">Kursteilnehmerin</span>
@@ -201,7 +201,7 @@
                 <div class="item">
                     <div class="block-33 h-100">
                         <div class="vcard d-flex mb-3">
-                            <!--<div class="image align-self-center"><img src="images/person_2.jpg" alt="Person here"></div>-->
+                            <div class="image align-self-center"><img src="images/Theresia.jpg" alt="Person here"></div>
                             <div class="name-text align-self-center">
                                 <h2 class="heading">Theresia</h2>
                                 <span class="meta">Kursteilnehmerin</span>
@@ -220,16 +220,36 @@
                 <div class="item">
                     <div class="block-33 h-100">
                         <div class="vcard d-flex mb-3">
-                            <!--<div class="image align-self-center"><img src="images/person_2.jpg" alt="Person here"></div>-->
+                            <div class="image align-self-center"><img src="images/Felix.jpg" alt="Person here"></div>
                             <div class="name-text align-self-center">
                                 <h2 class="heading">Felix</h2>
                                 <span class="meta">Kursteilnehmer</span>
-                            </div>p
+                            </div>
                         </div>
                         <div class="text">
                             <blockquote>
                                 <p>
                                     Ich habe Lenas Kurse mittlerweile schon drei mal besucht und sehr genossen. Man spürt ihre Begeisterung und erzielt tolle Ergebnisse schon während des Workshops. Die tolle Atmosphäre im liebevoll eingerichteten Stall rundet das Ganze ab.
+                                </p>
+                            </blockquote>
+                        </div>
+                    </div>
+                </div>
+                
+                
+                <div class="item">
+                    <div class="block-33 h-100">
+                        <div class="vcard d-flex mb-3">
+                            <div class="image align-self-center"><img src="images/Melle.jpg" alt="Person here"></div>
+                            <div class="name-text align-self-center">
+                                <h2 class="heading">Melle</h2>
+                                <span class="meta">Kursteilnehmer</span>
+                            </div>
+                        </div>
+                        <div class="text">
+                            <blockquote>
+                                <p>
+                                    Ich war beim ersten Kurs von Lena dabei und es war damals so schön alles vorbereitet und organisiert ❤️ Der Stall ist so gemütlich--kommt man gerne wieder 😊
                                 </p>
                             </blockquote>
                         </div>
