--- a/kursbuchenAdvanced.html
+++ b/kursbuchenAdvanced.html
@@ -145,8 +145,8 @@
                                 <label for="full-name">Kurs wählen</label>
                                 <select name="Gewaehlter-Kurs" required="" class="form-control " style="height:50px">
                                     <option value="Select" selected="" disabled="">Kurs</option>
-                                    <option value="Fortgeschritten  19.05.2020">Fortgeschritten 19.05.2020</option>
-                                    <option value="Fortgeschritten  26.05.2020">Fortgeschritten 26.05.2020</option>
+                                    <option value="Kein Termin">Aktuell keine Termine verfügbar</option>
+                                    <!--<option value="Fortgeschritten  26.05.2020">Fortgeschritten 26.05.2020</option>-->
                                 </select>
                             </div>
                         </div>
