bg navbar transparent

--- a/blumenkranz.html
+++ b/blumenkranz.html
@@ -38,7 +38,7 @@
 
     <!-- Startbild -->
     <div class="slider-item overlay" data-stellar-background-ratio="0.5"
-         style="background-image: url('images/BlickindenStall_1800p.JPG');">
+         style="        background-image: url('images/IMG_9045.jpg');">
         <div class="container">
             <div class="row slider-text align-items-center justify-content-center">
                 <div class="col-lg-12 text-center col-sm-12 smooth-scroll">
@@ -91,19 +91,11 @@
                             </div>
                         </div>
                         <div class="row">
-                            <div class="col-md-6 form-group">
+                            <div class="col-md-12 form-group">
                                 <label for="email">Email</label>
                                 <input type="email" id="email" name="_replyto" placeholder="deineEmail@domain.de" class="form-control " required>
                             </div>
-                            <div class="col-md-6 form-group">
-                                <label for="full-name">Blumenkranz Art</label>
-                                <select name="Gewaehlte-Art" required="" class="form-control " style="height:50px">
-                                    <option value="Select" selected="" disabled="">Blumenkranz Art</option>
-                                    <option value="Ring">Ring - Temporär nicht verfügbar</option>
-                                    <option value="Stickrahmen">Stickrahmen</option>
-
-                                </select>
-                            </div>
+                            
                         </div>
                         <div class="row">
                             <!--<div class="col-md-12 form-group">
@@ -116,13 +108,18 @@
 
         </div>-->
                             <div class="col-md-12 form-group">
-                                <label for="full-name">Größe Stickrahmen<!--(nur bei Stickrahmen)--> </label>
-                                <select name="Personalisierung" required="" class="form-control " style="height:50px">
-                                    <!--<option value="Select" selected="">Ring gewählt</option>-->
-                                    <option value="Ohne Trockenblumen 25cm 17€">Ohne Trockenblumen 25cm - 17€</option>
-                                    <option value="Mit Trockenblumen 25cm 29€">Mit Trockenblumen 25cm - 29€</option>
-                                    <option value="Ohne Trockenblumen 44cm 25€">Ohne Trockenblumen 44cm - 25€</option>
-                                    <option value="Mit Trockenblumen 44cm 37€">Mit Trockenblumen 44cm - 37€</option>
+                                <label for="full-name">Art<!--(nur bei Stickrahmen)--> </label>
+                                <select name="Gewaehlte-Art" required="" class="form-control " style="height:50px">
+                                    <option value="Select" selected="" disabled="">Art</option>
+                                    <option value="Metallring, 30 cm, ohne Trockenblumen 19 €">Metallring, 30 cm, ohne Trockenblumen 19 €</option>
+                                    <option value="Metallring, 30 cm, mit Trockenblumen 26 €">Metallring, 30 cm, mit Trockenblumen 26 €</option>
+                                    <option value="Metallring, 40 cm, ohne Trockenblumen 20 €">Metallring, 40 cm, ohne Trockenblumen 20 €</option>
+                                    <option value="Metallring, 40 cm, mit Trockenblumen 27 €">Metallring, 40 cm, mit Trockenblumen 27 €</option>
+                                    <option value="Stickrahmen, 25 cm, ohne Trockenblumen 18,50 €">Stickrahmen, 25 cm, ohne Trockenblumen 18,50 €</option>
+                                    <option value="Stickrahmen, 25 cm, mit Trockenblumen 25,50 €">Stickrahmen, 25 cm, mit Trockenblumen 25,50 €</option>
+                                    <option value="Stickrahmen, 30 cm, ohne Trockenblumen 19 €">Stickrahmen, 30 cm, ohne Trockenblumen 19 €</option>
+                                    <option value="Stickrahmen, 30 cm, mit Trockenblumen 26 €">Stickrahmen, 30 cm, mit Trockenblumen 26 €</option>
+
                                 </select>
                             </div>
                         </div>
