--- a/shop.html
+++ b/shop.html
@@ -71,7 +71,7 @@
 
     <!-- Startbild -->
     <div class="slider-item overlay" data-stellar-background-ratio="0.5"
-         style="background-image: url('images/BlickindenStall_1800p.JPG');">
+         style="        background-image: url('images/Titelbild_shop.jpg');">
         <div class="container">
             <div class="row slider-text align-items-center justify-content-center">
                 <div class="col-lg-12 text-center col-sm-12">
@@ -92,7 +92,7 @@
                     <p>
                         Jeder Artikel ist ein Unikat und wird von Hand beschriftet.<br />
                         Bitte beachtet deshalb eine etwas längere Phase zur Erstellung von bis zu zwei Wochen.<br />
-                        Besucht auch gerne mal meine Rubrik im <a href="https://perlenkinderwelt.de/papeterie/" target="_blank">Perlenkinderwelt</a> Shop.
+                        <!--Besucht auch gerne mal meine Rubrik im <a href="https://perlenkinderwelt.de/papeterie/" target="_blank">Perlenkinderwelt</a> Shop.-->
                     </p>
                 </div>
             </div>
@@ -112,7 +112,7 @@
                 <div class="col-sm-4 col-md-4 col-lg-4" data-aos="fade" data-aos-delay="200">
                     <a href="fussmatte.html" class="work-thumb">
                         <div class="work-text">
-                            <h2>Fußmatten personalisieren</h2>
+                            <h2>Personalisierte Fußmatten</h2>
                         </div>
                         <img src="images/Website_5Shop_Kachel_FußmatteIMG_8261.jpg" alt="Image" class="img-fluid">
                     </a>
