--- a/blumenkranz.html
+++ b/blumenkranz.html
@@ -61,7 +61,7 @@
                                 <span class="ion-ios-location icon mr-3"></span>
 
                             <p>
-                                Hier kannst du ganz einfach deinen personalisierten Blumenkranz bestellen, ich melde mich dann schnellstmöglich bei dir. Beispiele der Blumenkranz-Arten findest du <a href="#Beispiel">hier</a> unterhalb des Formulars.
+                                Hier kannst du ganz einfach deinen personalisierten Trockenblumenkranz bestellen, ich melde mich dann schnellstmöglich bei dir. Beispiele der Blumenkranz-Arten findest du <a href="#Beispiel">hier</a> unterhalb des Formulars.
                             </p>
                         </div>
                     </div>
@@ -111,14 +111,10 @@
                                 <label for="full-name">Art<!--(nur bei Stickrahmen)--> </label>
                                 <select name="Gewaehlte-Art" required="" class="form-control " style="height:50px">
                                     <option value="Select" selected="" disabled="">Art</option>
-                                    <option value="Metallring, 30 cm, ohne Trockenblumen 19 €">Metallring, 30 cm, ohne Trockenblumen 19 €</option>
-                                    <option value="Metallring, 30 cm, mit Trockenblumen 26 €">Metallring, 30 cm, mit Trockenblumen 26 €</option>
-                                    <option value="Metallring, 40 cm, ohne Trockenblumen 20 €">Metallring, 40 cm, ohne Trockenblumen 20 €</option>
-                                    <option value="Metallring, 40 cm, mit Trockenblumen 27 €">Metallring, 40 cm, mit Trockenblumen 27 €</option>
-                                    <option value="Stickrahmen, 25 cm, ohne Trockenblumen 18,50 €">Stickrahmen, 25 cm, ohne Trockenblumen 18,50 €</option>
-                                    <option value="Stickrahmen, 25 cm, mit Trockenblumen 25,50 €">Stickrahmen, 25 cm, mit Trockenblumen 25,50 €</option>
-                                    <option value="Stickrahmen, 30 cm, ohne Trockenblumen 19 €">Stickrahmen, 30 cm, ohne Trockenblumen 19 €</option>
-                                    <option value="Stickrahmen, 30 cm, mit Trockenblumen 26 €">Stickrahmen, 30 cm, mit Trockenblumen 26 €</option>
+                                    <option value="Metallring, 30cm 26€">Metallring, 30cm 26€</option>
+                                    <option value="Metallring, 40cm 28€">Metallring, 40cm 28€</option>
+                                    <option value="Stickrahmen, 25cm 27€">Stickrahmen, 25cm 27€</option>
+                                    <option value="Stickrahmen, 30cm 29€">Stickrahmen, 30cm 29€</option>
 
                                 </select>
                             </div>
