--- a/fussmatte.html
+++ b/fussmatte.html
@@ -98,12 +98,34 @@
                                     <label for="full-name">Größe wählen</label>
                                     <select name="Groesse" required="" class="form-control " style="height:50px">
                                         <option value="Select" selected="" disabled="">Groesse</option>
-                                        <option value="40x60 Bis zu 10 Zeichen 28 €">40x60 Bis zu 10 Zeichen (z. B. Daheim, Home, Hallo …) 28€</option>
-                                        <option value="40x60 Bis zu 20 Zeichen 36 €">40x60 Bis zu 20 Zeichen (z. B. Herzlich Willkommen, Familie Müller, …) 36€</option>
-                                        <option value="40x60 Ab 21 Zeichen 41 €">40x60 Ab 21 Zeichen (z. B. Herzlich Willkommen bei den Müllers, Hereinspaziert bei den Müllers, ..) 41€</option>
-                                        <option value="60x90 Bis zu 10 Zeichen 28 €">60x90 Bis zu 10 Zeichen (z. B. Daheim, Home, Hallo …) 32€</option>
-                                        <option value="60x90 Bis zu 20 Zeichen 36 €">60x90 Bis zu 20 Zeichen (z. B. Herzlich Willkommen, Familie Müller, …) 40€</option>
-                                        <option value="60x90 Ab 21 Zeichen 41 €">60x90 Ab 21 Zeichen (z. B. Herzlich Willkommen bei den Müllers, Hereinspaziert bei den Müllers, ..) 45€</option>
+                                        <option value="40x60cm Bis 10 Zeichen 28€">40x60cm Bis 10 Zeichen 28€</option>
+                                        <option value="40x60cm Bis 20 Zeichen 36€">40x60cm Bis 20 Zeichen 36€</option>
+                                        <option value="40x60cm Ab 21 Zeichen 41€" >40x60cm Ab 21 Zeichen 41€</option>
+                                        <option value="50x80cm Bis 10 Zeichen 32€">50x80cm Bis 10 Zeichen 32€</option>
+                                        <option value="50x80cm Bis 20 Zeichen 40€">50x80cm Bis 20 Zeichen 40€</option>
+                                        <option value="50x80cm Ab 21 Zeichen 45€" >50x80cm Ab 21 Zeichen 45€</option>
+                                        <option value="60x90cm Bis 10 Zeichen 36€">60x90cm Bis 10 Zeichen 36€</option>
+                                        <option value="60x90cm Bis 20 Zeichen 44€">60x90cm Bis 20 Zeichen 44€</option>
+                                        <option value="60x90cm Ab 21 Zeichen 49€" >60x90cm Ab 21 Zeichen 49€</option>
+
+                                        <!--
+                                            40x60cm Bis 10 Zeichen 28€
+                                            40x60cm Bis 20 Zeichen 36€
+                                            40x60cm Ab 21 Zeichen 41€
+                                            50x80cm Bis 10 Zeichen 32€
+                                            50x80cm Bis 20 Zeichen 40€
+                                            50x80cm Ab 21 Zeichen 45€
+                                            60x90cm Bis 10 Zeichen 36€
+                                            60x90cm Bis 20 Zeichen 44€
+                                            60x90cm Ab 21 Zeichen 49€
+
+
+
+
+
+                                            -->
+
+
 
                                     </select>
                                 </div>
