--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         </nav>
     </header>
 
-    <!-- Startbild -->
+    <!-- Startbild class="slider-item overlay" -->
     <div class="slider-item overlay" data-stellar-background-ratio="0.5"
          style="        background-image: url('images/Website_1Willkommen_Header_Lettering im Stall-1800p.jpg');">
         <div class="container">
