--- a/letteringlernen.html
+++ b/letteringlernen.html
@@ -243,7 +243,7 @@
                             <div class="image align-self-center"><img src="images/Melle.jpg" alt="Person here"></div>
                             <div class="name-text align-self-center">
                                 <h2 class="heading">Melle</h2>
-                                <span class="meta">Kursteilnehmer</span>
+                                <span class="meta">Kursteilnehmerin</span>
                             </div>
                         </div>
                         <div class="text">
