--- a/letteringlernen.html
+++ b/letteringlernen.html
@@ -166,7 +166,7 @@
                             <div class="image align-self-center"><img src="images/Ariane.jpg" alt="Person here"></div>
                             <div class="name-text align-self-center">
                                 <h2 class="heading">Ariane und Swetlana</h2>
-                                <span class="meta">Kursteilnehmer</span>
+                                <span class="meta">Kursteilnehmerinnen</span>
                             </div>
                         </div>
                         <div class="text">
