--- a/shop.html
+++ b/shop.html
@@ -122,7 +122,7 @@
                 <div class="col-sm-4 col-md-4 col-lg-4" data-aos="fade" data-aos-delay="300">
                     <a href="blumenkranz.html" class="work-thumb">
                         <div class="work-text">
-                            <h2>Personalisierte Blumenkränze mit Trockenblumen</h2>
+                            <h2>Personalisierte Trockenblumenkränze</h2>
 
                         </div>
                         <img src="images/Blumenkranz.jpg" alt="Image" class="img-fluid">
