--- a/gutscheinbestellen.html
+++ b/gutscheinbestellen.html
@@ -97,6 +97,7 @@
                                 <label for="full-name">Gutschein wählen</label>
                                 <select name="Gewaehlter-Gutschein" required="" class="form-control " style="height:50px">
                                     <option value="Select" selected="" disabled="">Gutscheinwert</option>
+                                    <option value="BeliebigerWert">Beliebiger Wert</option>     
                                     <option value="10€">10€</option>
                                     <option value="20€">20€</option>
                                     <option value="30€">30€</option>
