--- a/fussmatte.html
+++ b/fussmatte.html
@@ -62,7 +62,7 @@
                                     <span class="ion-ios-location icon mr-3"></span>
 
                                 <p>
-                                    Hier kannst du ganz einfach deine personalisierte Fußmatte bestellen, ich melde mich dann schnellstmöglich bei dir. Achtung, bei den Fußmatten ist leider nur Abholung möglich.
+                                    Hier kannst du ganz einfach deine personalisierte Fußmatte bestellen, ich melde mich dann schnellstmöglich bei dir.
                                 </p>
                             </div>
                         </div>
