--- a/fussmatte.html
+++ b/fussmatte.html
@@ -62,7 +62,10 @@
                                     <span class="ion-ios-location icon mr-3"></span>
 
                                 <p>
-                                    Hier kannst du ganz einfach deine personalisierte Fußmatte bestellen, ich melde mich dann schnellstmöglich bei dir.
+                                    Diese Fußmatte mit individuellem Text ist der perfekte Willkommensgruß fürs Zuhause. Bei der Beschriftung handelt es sich um 100% Handarbeit.
+                                    Die Fußmatte sollte  vorzugsweise im Innenraum wie der Wohnungstür oder im Hausflur ihren Platz finden. Auf der Rückseite ist die Fußmatte mit einer rutschfesten Gummiunterlage gesichert. Bei der Kokosfaser-Matte handelt es sich um ein Naturprodukt. Jede Matte hat daher ihre eigene Beschaffenheit, z. B. hinsichtlich der Fasern und geringe Farbunterschiede.
+                                    
+                                    Hier kannst du nun ganz einfach deine personalisierte Fußmatte bestellen, ich melde mich dann schnellstmöglich bei dir.
                                 </p>
                             </div>
                         </div>
