--- a/blumenkranz.html
+++ b/blumenkranz.html
@@ -108,9 +108,10 @@
 
         </div>-->
                             <div class="col-md-12 form-group">
-                                <label for="full-name">Art<!--(nur bei Stickrahmen)--> </label>
+                                <label for="full-name">Art/Preisinformation<!--(nur bei Stickrahmen)--> </label>
                                 <select name="Gewaehlte-Art" required="" class="form-control " style="height:50px">
                                     <option value="Select" selected="" disabled="">Art</option>
+                                    <option value="Metallring, 20cm 24€">Metallring, 20cm 24€</option>
                                     <option value="Metallring, 30cm 26€">Metallring, 30cm 26€</option>
                                     <option value="Metallring, 40cm 28€">Metallring, 40cm 28€</option>
                                     <option value="Stickrahmen, 25cm 27€">Stickrahmen, 25cm 27€</option>
