--- a/fussmatte.html
+++ b/fussmatte.html
@@ -63,7 +63,9 @@
 
                                 <p>
                                     Diese Fußmatte mit individuellem Text ist der perfekte Willkommensgruß fürs Zuhause. Bei der Beschriftung handelt es sich um 100% Handarbeit.
+
                                     Die Fußmatte sollte  vorzugsweise im Innenraum wie der Wohnungstür oder im Hausflur ihren Platz finden. Auf der Rückseite ist die Fußmatte mit einer rutschfesten Gummiunterlage gesichert. Bei der Kokosfaser-Matte handelt es sich um ein Naturprodukt. Jede Matte hat daher ihre eigene Beschaffenheit, z. B. hinsichtlich der Fasern und geringe Farbunterschiede.
+                                    
                                     
                                     Hier kannst du nun ganz einfach deine personalisierte Fußmatte bestellen, ich melde mich dann schnellstmöglich bei dir.
                                 </p>
@@ -98,7 +100,7 @@
                                     <input type="email" id="email" name="_replyto" placeholder="deineEmail@domain.de" class="form-control " required>
                                 </div>
                                 <div class="col-md-6 form-group">
-                                    <label for="full-name">Größe wählen</label>
+                                    <label for="full-name">Größe wählen/Preisinformation</label>
                                     <select name="Groesse" required="" class="form-control " style="height:50px">
                                         <option value="Select" selected="" disabled="">Groesse</option>
                                         <option value="40x60cm Bis 10 Zeichen 28€">40x60cm Bis 10 Zeichen 28€</option>
