Bild Blumenkranz Ring/Fussmatte Text formatiert

--- a/fussmatte.html
+++ b/fussmatte.html
@@ -62,11 +62,10 @@
                                     <span class="ion-ios-location icon mr-3"></span>
 
                                 <p>
-                                    Diese Fußmatte mit individuellem Text ist der perfekte Willkommensgruß fürs Zuhause. Bei der Beschriftung handelt es sich um 100% Handarbeit.
-
-                                    Die Fußmatte sollte  vorzugsweise im Innenraum wie der Wohnungstür oder im Hausflur ihren Platz finden. Auf der Rückseite ist die Fußmatte mit einer rutschfesten Gummiunterlage gesichert. Bei der Kokosfaser-Matte handelt es sich um ein Naturprodukt. Jede Matte hat daher ihre eigene Beschaffenheit, z. B. hinsichtlich der Fasern und geringe Farbunterschiede.
-                                    
-                                    
+                                    Diese Fußmatte mit individuellem Text ist der perfekte Willkommensgruß fürs Zuhause. Bei der Beschriftung handelt es sich um 100 % Handarbeit.
+                                    Die Fußmatte sollte vorzugsweise im Innenraum wie der Wohnungstür oder im Hausflur ihren Platz finden. Auf der Rückseite ist die Fußmatte mit einer rutschfesten Gummiunterlage gesichert. Bei der Kokosfaser-Matte handelt es sich um ein Naturprodukt, daher hat jede Matte ihre eigene Beschaffenheit, z. B. hinsichtlich der Fasern und geringe Farbunterschiede.
+                                </p>
+                                <p>
                                     Hier kannst du nun ganz einfach deine personalisierte Fußmatte bestellen, ich melde mich dann schnellstmöglich bei dir.
                                 </p>
                             </div>
