--- a/anfrage.html
+++ b/anfrage.html
@@ -91,8 +91,9 @@
                             <p class="d-flex">
                                 <span class="ion-ios-location icon mr-3"></span>
                                 <span>
-                                    Für Auftragsarbeit, ein individuelles Lettering oder individuelle Workshops für einen Geburtstag oder Junggesellinenabschied kannst Du dich bei mir melden.
+                                    Für Auftragsarbeit, ein individuelles Lettering oder individuelle Workshops für einen Geburtstag oder Junggesellinnenabschied kannst Du dich bei mir melden.
                                     Ich bin mir sicher, wir stellen ein tolles Kreativprogramm zusammen und/oder finden einen passenden Termin.
+                                    Die Mindestteilnehmerzahl für einen privaten Lettering-Workshop liegt bei 9 Personen.
                                 </span>
                             </p>
                         </div>
