--- a/kursbuchen.html
+++ b/kursbuchen.html
@@ -184,7 +184,7 @@
                                 </select>
                             </div>
                             <div class="col-md-6 form-group">
-                                <label for="message">Zum Zeitpunkt des Workshops erfülle ich nachweislich mindestens eine dieser Bedingungen</a></label>
+                                <label for="message">Zum Zeitpunkt des Workshops erfüllst du nachweislich mindestens eine dieser Bedingungen</a></label>
                             </div>
                         </div>
 
