--- a/kursbuchen.html
+++ b/kursbuchen.html
@@ -148,8 +148,8 @@
                             </div>
                             <div class="col-md-6 form-group">
                                 <label for="full-name">Kurs wählen</label>
-                                <select name="Gewaehlter-Kurs" required="" class="form-control " style="height:50px">
-                                    <option value="Select" selected="" disabled="">Kurs</option>
+                                <select name="Gewaehlter-Kurs" required class="form-control " style="height:50px">
+                                    <option value="" selected="" disabled="">Kurs</option>
                                     <option value="11.06.21 (Fr) 17:30 – 20:30 Uhr">11.06.21 (Fr) 17:30 – 20:30 Uhr</option>
                                     <option value="12.06.21 (Sa) 10 – 13 Uhr">12.06.21 (Sa) 10 – 13 Uhr</option>
                                     <!--<option value="12.06.21 (Sa) 17:30 – 20:30 Uhr">12.06.21 (Sa) 17:30 – 20:30 Uhr</option>-->
@@ -170,14 +170,14 @@
                         <div class="row">
                             <div class="col-md-12 form-group">
                                 <label for="message">Nachricht</label>
-                                <textarea name="Nachricht" id="message" class="form-control" placeholder="Hier kannst du eine Nachricht für mich hinterlassen" required cols="30" rows="8"></textarea>
+                                <textarea name="Nachricht" id="message" class="form-control" placeholder="Hier kannst du eine Nachricht für mich hinterlassen" cols="30" rows="8"></textarea>
                             </div>
                         </div>
 
                         <div class="row">
                             <div class="col-md-6 form-group">
-                                <select name="Coronabedingungen" required="" class="form-control " style="height:50px" required>
-                                    <option value="Select" selected="" disabled="">Coronabedingungen</option>
+                                <select name="Coronabedingungen" required class="form-control " style="height:50px" required>
+                                    <option value="" selected="" disabled="">Coronabedingungen</option>
                                     <option value="in den letzten 24h negativ getestet worden">in den letzten 24h negativ getestet worden</option>
                                     <option value="seit mindestens 14 Tagen vollständig geimpft">seit mindestens 14 Tagen vollständig geimpft</option>
                                     <option value="genesen">genesen</option>
@@ -190,8 +190,8 @@
 
                         <div class="row">
                             <div class="col-md-3 form-group">
-                                <select name="Datenschutz" required="" class="form-control " style="height:50px" required>
-                                    <option value="Select" selected="" disabled="">Datenschutz</option>
+                                <select name="Datenschutz" required class="form-control " style="height:50px" required>
+                                    <option value="" selected="" disabled="">Datenschutz</option>
                                     <option value="Einverstanden">Einverstanden</option>
                                 </select>
                             </div>
