--- a/kursbuchenAdvanced.html
+++ b/kursbuchenAdvanced.html
@@ -143,8 +143,8 @@
                             </div>
                             <div class="col-md-6 form-group">
                                 <label for="full-name">Kurs wählen</label>
-                                <select name="Gewaehlter-Kurs" required="" class="form-control " style="height:50px">
-                                    <option value="Select" selected="" disabled="">Kurs</option>
+                                <select name="Gewaehlter-Kurs" required class="form-control " style="height:50px">
+                                    <option value="" selected="" disabled="">Kurs</option>
                                     <option value="Kein Termin">Aktuell keine Termine verfügbar</option>
                                     <!--<option value="Fortgeschritten  26.05.2020">Fortgeschritten 26.05.2020</option>-->
                                 </select>
@@ -159,8 +159,8 @@
                         </div>
                         <div class="row">
                             <div class="col-md-3 form-group">
-                                <select name="Datenschutz" required="" class="form-control " style="height:50px" required>
-                                    <option value="Select" selected="" disabled="">Datenschutz</option>
+                                <select name="Datenschutz" required class="form-control " style="height:50px" required>
+                                    <option value="" selected="" disabled="">Datenschutz</option>
                                     <option value="Einverstanden">Einverstanden</option>
                                 </select>
                             </div>
